news image fixed + overflow

--- a/wp-content/plugins/bok/sass/main.scss
+++ b/wp-content/plugins/bok/sass/main.scss
@@ -429,7 +429,6 @@ p {
 
       img {
         width: 100%;
-        height: 350px;
       }
 
       a {
